@@ -1,3 +1,4 @@
 # EM
 mvn clean compile -Djetty.port=8080 jetty:run
 
+-XX:MaxPermSize=512M
